test/fixtures/complex/invalid/basic_7.mf2
.foo{:hello}
{{}}
=== spans ===
                    .foo{:hello}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                    ^^^^ 1:0-1:4
Pattern                               1:2-1:2
Text                                  1:2-1:2
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is unrecognized. (at @0..12)
  .foo{:hello}↵{{}}
  ^^^^^^^^^^^^
=== formatted ===
(cannot format due to fatal errors)
=== ast ===
ComplexMessage {
    span: @0..17,
    declarations: [],
    body: QuotedPattern {
        span: @13..17,
        pattern: Pattern {
            parts: [
                Text {
                    start: @15,
                    content: "",
                },
            ],
        },
    },
}